2023. 8. 7. Modified _zShape3DImportFromZTK to open external geometry files with binary mode (thanks to Daishi Kaneta). [zeo_shape3d]
2023. 8. 7. Redefined zAxis and zDir as int8_t (thanks to Daishi Kaneta). [zeo_misc]
2023. 8. 7. Modified terra_test in example/map (thanks to Daishi Kaneta). [example]
2023. 6.28. Abolished buf and lbuf members of zTexture and accordingly zTextureBumpAlloc. [zeo_render_texture]
2023. 6.26. Modified some examples to conform with the latest version (thanks to Daishi Kaneta). [example]
2023. 6.26. Modified labels in _zPH3DFReadSTL_BinVec (thanks to Daishi Kaneta). [zeo_ph_stl]
2023. 6.24. Debugged zeo.h to include zeo_mapnet.h. [zeo]
2023. 6.24. Debugged zVec3DOrthoNormal. [zeo_vec3d]
2023. 6.22. Added a test for zAAError and zAACascade. [test]
2023. 6.21. Separated config and libinfo. [all]
2023. 6. 2. Abolished _zShape3DOpticFPrint and _zShape3DTextureFPrint, and modified zShape3DFPrintZTK. [zeo_shape3d]
2023. 6. 1. Reflected modification of zeda-makefile-gen to keep zeo_export.h. [zeo_export]
2023. 5.25. Modified zCyl3DToPH, zCapsule3DToPH, and zCone3DToPH by using zVec3DOrthoNormal. [zeo_shape3d_cyl, zeo_shape3d_capsule, zeo_shape3d_cone]
2023. 5.25. Added zVec3DOrthoNormal. [zeo_vec3d]
2023. 5.25. Added zCapsule3D class. [zeo_shape3d_capsule, zeo_shape3d]
2023. 5.21. Modified _zOpticalInfoESRFromZTK, _zOpticalInfoSnsFromZTK, and _zOpticalInfoAlphaFromZTK to use zOpticalInfoSetESR, zOpticalInfoSetShininess, and zOpticalInfoSetAlpha, respectively. [zeo_render_optic]
2023. 5.21. Renamed _zOpticalInfoEsrFromZTK and _zOpticalInfoEsrFPrintZTK to _zOpticalInfoESRFromZTK and _zOpticalInfoESRFPrintZTK, respectively. [zeo_render_optic]
2023. 5.21. Added zOpticalInfoSetESR, zOpticalInfoSetShininess, and zOpticalInfoSetAlpha. [zeo_render_optic]
2023. 5.21. Removed register keywords. [app]
2023. 5.21. Corrected positions of __END_DECLS for C++ methods. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d, zeo_ep, zeo_frame3d]