@@ -13,6 +13,7 @@ __BEGIN_DECLS
 
 /*! \brief  read a 3D polyhedron from OBJ format */
 __ZEO_EXPORT zPH3D *zPH3DFReadOBJ(FILE *fp, zPH3D *ph);
+__ZEO_EXPORT zPH3D *zPH3DReadFileOBJ(zPH3D *ph, const char *filename);
 
 __END_DECLS
 
