@@ -16,19 +16,19 @@ __ZEO_EXPORT bool __zeo_stl_echo;
 #define zSTLEchoOff() ( __zeo_stl_echo = false )
 
 /*! \brief read and write a 3D polyhedron in ASCII STL format. */
-__ZEO_EXPORT zPH3D *zPH3DFReadSTL_ASCII(FILE *fp, zPH3D *ph, char name[], size_t namesize);
-__ZEO_EXPORT void zPH3DFWriteSTL_ASCII(FILE *fp, zPH3D *ph, char name[]);
+__ZEO_EXPORT zPH3D *zPH3DFReadSTL_ASCII(FILE *fp, zPH3D *ph, char shapenamebuf[], size_t bufsize);
+__ZEO_EXPORT void zPH3DFWriteSTL_ASCII(FILE *fp, zPH3D *ph, const char shapename[]);
 
 /*! \brief check if STL format is binary. */
 __ZEO_EXPORT bool zSTLIsBin(FILE *fp);
 
 /*! \brief read and write a 3D polyhedron in binary STL format. */
-__ZEO_EXPORT zPH3D *zPH3DFReadSTL_Bin(FILE *fp, zPH3D *ph, char name[]);
-__ZEO_EXPORT void zPH3DFWriteSTL_Bin(FILE *fp, zPH3D *ph, char name[]);
+__ZEO_EXPORT zPH3D *zPH3DFReadSTL_Bin(FILE *fp, zPH3D *ph, char shapenamebuf[]);
+__ZEO_EXPORT void zPH3DFWriteSTL_Bin(FILE *fp, zPH3D *ph, const char shapename[]);
 
 /*! \brief read and write a 3D polyhedron in STL format. */
-__ZEO_EXPORT zPH3D *zPH3DFReadSTL(FILE *fp, zPH3D *ph, char name[], size_t namesize);
-#define zPH3DFWriteSTL zPH3DFWriteSTL_ASCII
+__ZEO_EXPORT zPH3D *zPH3DReadFileSTL(zPH3D *ph, const char *filename, char shapenamebuf[], size_t bufsize);
+__ZEO_EXPORT void zPH3DWriteFileSTL(zPH3D *ph, const char *filename, const char shapename[]);
 
 __END_DECLS
 
