@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.14.5
+VERSION=1.14.6
 DEPENDENCY="zeda=1.8.0;zm=1.8.0"
