@@ -187,12 +187,12 @@ static void _zShape3DAssignPH(zShape3D *shape)
 }
 
 /* read a shape from a STL file. */
-zShape3D *zShape3DFReadSTL(FILE *fp, zShape3D *shape)
+zShape3D *zShape3DReadFileSTL(zShape3D *shape, const char *filename)
 {
   char buf[BUFSIZ];
 
   _zShape3DAssignPH( shape );
-  if( !zPH3DFReadSTL( fp, zShape3DPH(shape), buf, BUFSIZ ) ) return NULL;
+  if( !zPH3DReadFileSTL( zShape3DPH(shape), filename, buf, BUFSIZ ) ) return NULL;
   if( !zNamePtr(shape) )
     if( !zNameSet( shape, buf ) ) return NULL;
   return shape;
@@ -207,19 +207,19 @@ zShape3D *zShape3DFReadPLY(FILE *fp, zShape3D *shape)
 }
 
 /* read a shape from a OBJ file. */
-zShape3D *zShape3DFReadOBJ(FILE *fp, zShape3D *shape)
+zShape3D *zShape3DReadFileOBJ(zShape3D *shape, const char *filename)
 {
   _zShape3DAssignPH( shape );
-  if( !zPH3DFReadOBJ( fp, zShape3DPH(shape) ) ) return NULL;
+  if( !zPH3DReadFileOBJ( zShape3DPH(shape), filename ) ) return NULL;
   return shape;
 }
 
 #ifdef __ZEO_USE_DAE
 /* read a shape from a DAE file. */
-zShape3D *zShape3DFReadDAE(zShape3D *shape, char *filename)
+zShape3D *zShape3DReadFileDAE(zShape3D *shape, const char *filename)
 {
   _zShape3DAssignPH( shape );
-  if( !zPH3DFReadDAE( zShape3DPH(shape), filename ) ) return NULL;
+  if( !zPH3DReadFileDAE( zShape3DPH(shape), filename ) ) return NULL;
   return shape;
 }
 #endif /* __ZEO_USE_DAE */
@@ -289,24 +289,24 @@ static void *_zShape3DImportFromZTK(void *obj, int i, void *arg, ZTK *ztk){
   suffix = zGetSuffix( ZTKVal(ztk) );
   if( strcmp( suffix, "dae" ) == 0 || strcmp( suffix, "DAE" ) == 0 ){
 #ifdef __ZEO_USE_DAE
-    if( !zShape3DFReadDAE( (zShape3D *)obj, ZTKVal(ztk) ) ) obj = NULL;
+    if( !zShape3DReadFileDAE( (zShape3D *)obj, ZTKVal(ztk) ) ) obj = NULL;
 #else
     ZRUNWARN( ZEO_ERR_DAE_UNSUPPORTED );
     obj = NULL;
 #endif
+  } else
+  if( strcmp( suffix, "stl" ) == 0 || strcmp( suffix, "STL" ) == 0 ){
+    if( !zShape3DReadFileSTL( (zShape3D *)obj, ZTKVal(ztk) ) ) obj = NULL;
+  } else
+  if( strcmp( suffix, "obj" ) == 0 || strcmp( suffix, "OBJ" ) == 0 ){
+    if( !zShape3DReadFileOBJ( (zShape3D *)obj, ZTKVal(ztk) ) ) obj = NULL;
   } else{
-    if( !( fp = fopen( ZTKVal(ztk), "rb" ) ) ){
+    if( !( fp = fopen( ZTKVal(ztk), "r" ) ) ){
       ZOPENERROR( ZTKVal(ztk) );
       return NULL;
     }
-    if( strcmp( suffix, "stl" ) == 0 || strcmp( suffix, "STL" ) == 0 ){
-      if( !zShape3DFReadSTL( fp, (zShape3D *)obj ) ) obj = NULL;
-    } else
     if( strcmp( suffix, "ply" ) == 0 || strcmp( suffix, "PLY" ) == 0 ){
       if( !zShape3DFReadPLY( fp, (zShape3D *)obj ) ) obj = NULL;
-    } else
-    if( strcmp( suffix, "obj" ) == 0 || strcmp( suffix, "OBJ" ) == 0 ){
-      if( !zShape3DFReadOBJ( fp, (zShape3D *)obj ) ) obj = NULL;
     } else{
       ZRUNERROR( ZEO_WARN_SHAPE_UNKNOWNFORMAT, suffix );
       obj = NULL;
