@@ -1,3 +1,9 @@
+2023. 8. 7. Abolished zShape3DFReadOBJ, and defined zShape3DReadFileOBJ instead. [zeo_shape3d]
+2023. 8. 7. Added zPH3DReadFileOBJ. [zeo_ph_obj]
+2023. 8. 7. Modified specifications of zPH3DFWriteSTL_ASCII and zPH3DFWriteSTL_Bin. [zeo_ph_stl]
+2023. 8. 7. Modified specification of zPH3DReadFileDAE. [zeo_ph_dae]
+2023. 8. 7. Abolished zPH3DFReadSTL and zPH3DFWriteSTL, and added zPH3DReadFileSTL and zPH3DWriteFileSTL instead. [zeo_ph_stl, zeo_shape3d, app]
+2023. 8. 7. Renamed zPH3DFReadDAE and zShape3DFReadDAE to zPH3DReadFileDAE and zShape3DReadFileDAE, respectively. [zeo_ph_dae, zeo_shape3d]
 2023. 8. 7. Modified _zShape3DImportFromZTK to open external geometry files with binary mode (thanks to Daishi Kaneta). [zeo_shape3d]
 2023. 8. 7. Redefined zAxis and zDir as int8_t (thanks to Daishi Kaneta). [zeo_misc]
 2023. 8. 7. Modified terra_test in example/map (thanks to Daishi Kaneta). [example]
